--- a/src/view/Accueil.fxml
+++ b/src/view/Accueil.fxml
@@ -9,12 +9,12 @@
 
 <AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.Accueil">
   <children>
-    <AnchorPane fx:id="menuPanel" layoutX="0.0" layoutY="0.0" prefHeight="600.0" prefWidth="200.0">
+    <AnchorPane fx:id="menuPanel" layoutX="0.0" layoutY="0.0" prefHeight="800.0" prefWidth="200.0">
       <children>
-        <Button id="btnAjoutEquip" onAction="#ajoutEquip" layoutX="16.0" layoutY="177.0" mnemonicParsing="false" prefWidth="168.0" text="Ajouter un équipement" />
-        <Button id="btnLogicielGest" onAction="#logicielGest" layoutX="16.0" layoutY="233.0" mnemonicParsing="false" prefWidth="168.0" text="Gestion des logiciels" />
-        <Button id="btnAgentGest" onAction="#agentGest" layoutX="16.0" layoutY="290.0" mnemonicParsing="false" prefWidth="168.0" text="Gestion des agents" />
-        <Button id="btnStatPrev" onAction="#statPrev" layoutX="15.0" layoutY="347.0" mnemonicParsing="false" prefWidth="168.0" text="Statistiques/Prévisions" />
+        <Button id="btnAjoutEquip" layoutX="16.0" layoutY="177.0" mnemonicParsing="false" onAction="#ajoutEquip" prefWidth="168.0" text="Ajouter un équipement" />
+        <Button id="btnLogicielGest" layoutX="16.0" layoutY="233.0" mnemonicParsing="false" onAction="#logicielGest" prefWidth="168.0" text="Gestion des logiciels" />
+        <Button id="btnAgentGest" layoutX="16.0" layoutY="290.0" mnemonicParsing="false" onAction="#agentGest" prefWidth="168.0" text="Gestion des agents" />
+        <Button id="btnStatPrev" layoutX="16.0" layoutY="347.0" mnemonicParsing="false" onAction="#statPrev" prefWidth="168.0" text="Statistiques/Prévisions" />
         <ImageView fitHeight="92.0" fitWidth="122.66666666666666" layoutX="39.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
           <image>
             <Image url="@../res/logo-sncf.jpg" />
@@ -22,9 +22,6 @@
         </ImageView>
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="bodyPanel" layoutX="200.0" layoutY="0.0" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8">
-    	<children>
-	    </children>
-	</AnchorPane>
+    <AnchorPane fx:id="bodyPanel" layoutX="200.0" layoutY="0.0" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8" />
   </children>
 </AnchorPane>
