--- a/src/view/GestionAgent.fxml
+++ b/src/view/GestionAgent.fxml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="425.0" prefWidth="499.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label layoutX="126.0" layoutY="192.0" text="Page gestion agent: en construction !" />
-   </children>
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutAgent">
+  <children>
+    <Label layoutX="313.0" layoutY="85.0" text="Modifier/Supprimer des agents">
+      <font>
+        <Font name="System Bold" size="17.0" />
+      </font>
+    </Label>
+    <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
+    <Button id="btnEditDelete" layoutX="380.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Ajouter des agents" />
+    <TableView layoutX="29.0" layoutY="172.0" prefHeight="596.0" prefWidth="842.0">
+      <columns>
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="192.0" text="Nom" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="130.0" text="Prénom" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="154.0" text="Date de naissance" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="112.0" text="N° de CP" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="104.0" text="N° de Poste" />
+        <TableColumn maxWidth="5000.0" minWidth="0.0" prefWidth="74.0" text="Modifier" />
+        <TableColumn prefWidth="75.0" text="Supprimer" />
+      </columns>
+    </TableView>
+    <TextField layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
+    <Button layoutX="738.0" layoutY="134.0" mnemonicParsing="false" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
+  </children>
 </AnchorPane>
