--- a/src/view/AjoutAgent.fxml
+++ b/src/view/AjoutAgent.fxml
@@ -26,5 +26,6 @@
     <TextField layoutX="351.0" layoutY="428.0" prefWidth="200.0" />
     <Label layoutX="241.0" layoutY="431.0" text="N° de poste" />
     <Button layoutX="563.0" layoutY="428.0" mnemonicParsing="false" text="Rechercher le poste" />
+    <Button layoutX="416.0" layoutY="641.0" mnemonicParsing="false" text="Ajouter" />
   </children>
 </AnchorPane>
