--- a/src/view/GestionAgent.fxml
+++ b/src/view/GestionAgent.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutAgent">
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionAgent">
   <children>
     <Label layoutX="313.0" layoutY="85.0" text="Modifier/Supprimer des agents">
       <font>
@@ -14,7 +14,7 @@
       </font>
     </Label>
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
-    <Button id="btnEditDelete" layoutX="380.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Ajouter des agents" />
+    <Button id="btnEditDelete" layoutX="380.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddAgent" text="Ajouter des agents" />
     <TableView layoutX="29.0" layoutY="172.0" prefHeight="596.0" prefWidth="842.0">
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="192.0" text="Nom" />
