--- a/src/view/Accueil.fxml
+++ b/src/view/Accueil.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.Accueil">
   <children>
-    <AnchorPane fx:id="menuPanel" layoutX="0.0" layoutY="0.0" prefHeight="800.0" prefWidth="200.0">
+    <AnchorPane fx:id="menuPanel" prefHeight="800.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="900.0" AnchorPane.topAnchor="0.0">
       <children>
         <Button id="btnAjoutEquip" layoutX="8.0" layoutY="177.0" mnemonicParsing="false" onAction="#ajoutEquip" prefWidth="184.0" text="Gestion des équipements" />
         <Button id="btnLogicielGest" layoutX="8.0" layoutY="233.0" mnemonicParsing="false" onAction="#logicielGest" prefWidth="184.0" text="Gestion des logiciels" />
@@ -20,8 +20,10 @@
             <Image url="@../res/logo-sncf.jpg" />
           </image>
         </ImageView>
+        <Button layoutX="54.0" layoutY="747.0" mnemonicParsing="false" text="Configuration" />
+        <Button layoutX="17.0" layoutY="707.0" mnemonicParsing="false" text="Import / Export de données" />
       </children>
     </AnchorPane>
-    <AnchorPane fx:id="bodyPanel" layoutX="200.0" layoutY="0.0" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8" />
+    <AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
   </children>
 </AnchorPane>
