--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -26,5 +26,6 @@
         <Font name="System Bold" size="18.0" />
       </font>
     </Label>
+    <Button layoutX="745.0" layoutY="22.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
