--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionEquipement">
   <children>
-    <Button layoutX="360.0" layoutY="22.0" mnemonicParsing="false" text="Ajouter des équipements" onAction="#displayAddEquipment" />
+    <Button layoutX="360.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddEquipment" text="Ajouter des équipements" />
     <TableView layoutX="29.0" layoutY="172.0" prefHeight="596.0" prefWidth="842.0">
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="N° d'équipement" />
@@ -27,5 +27,6 @@
         <Font name="System Bold" size="18.0" />
       </font>
     </Label>
+    <Button layoutX="745.0" layoutY="22.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
