--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -9,7 +9,7 @@
 <AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionEquipement">
   <children>
     <Button layoutX="360.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddEquipment" text="Ajouter des équipements" />
-    <TableView layoutX="29.0" layoutY="172.0" prefHeight="596.0" prefWidth="842.0">
+    <TableView layoutX="29.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="596.0" prefWidth="842.0">
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="N° d'équipement" />
         <TableColumn prefWidth="75.0" text="Valeur (€)" />
@@ -21,7 +21,7 @@
     </TableView>
     <TextField layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
     <Button layoutX="738.0" layoutY="134.0" mnemonicParsing="false" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
-    <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
+    <Separator layoutY="63.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label layoutX="276.0" layoutY="85.0" text="Modifier/Supprimer des équipements">
       <font>
         <Font name="System Bold" size="18.0" />
