--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionLogiciel">
+<AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionLogiciel">
   <children>
     <Button layoutX="375.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddLogiciel" text="Ajouter des logiciels" />
-    <TableView layoutX="29.0" layoutY="172.0" prefHeight="596.0" prefWidth="842.0">
+    <TableView layoutY="172.0" prefHeight="596.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="438.0" text="Libelle logiciel" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Valeur licence (€)" />
@@ -20,7 +20,7 @@
     </TableView>
     <TextField layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
     <Button layoutX="738.0" layoutY="134.0" mnemonicParsing="false" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
-    <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
+    <Separator layoutY="63.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label layoutX="297.0" layoutY="85.0" text="Modifier/Supprimer des logiciels">
       <font>
         <Font name="System Bold" size="18.0" />
