--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -6,25 +6,35 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutEquipement">
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutEquipement">
   <children>
     <Label layoutX="365.0" layoutY="85.0" text="Nouvel équipement">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <TextField fx:id="numPoste" layoutX="350.0" layoutY="166.0" prefHeight="31.0" prefWidth="200.0" />
-    <TextField fx:id="numCPAgent" editable="false" layoutX="350.0" layoutY="279.0" prefHeight="31.0" prefWidth="200.0" />
-    <Label layoutX="200.0" layoutY="174.0" text="N° d'équipement" />
-    <Button fx:id="btnSelectAgent" layoutX="572.0" layoutY="284.0" mnemonicParsing="false" onAction="#selectionAgent" text="Sélection Agent" />
-    <Label layoutX="224.0" layoutY="286.0" text="N° CP Agent" />
-    <Label layoutX="225.0" layoutY="348.0" text="Logiciels" />
-    <Button fx:id="btnSelectLogiciels" layoutX="572.0" layoutY="346.0" mnemonicParsing="false" onAction="#selectionLogiciels" text="Sélection logiciels" />
-    <Label layoutX="232.0" layoutY="228.0" text="Valeur (€)" />
-    <TextField fx:id="prix" layoutX="350.0" layoutY="220.0" prefHeight="31.0" prefWidth="200.0" />
-    <Button fx:id="btnEnregistrer" layoutX="398.0" layoutY="586.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
-    <ListView fx:id="lstLogiciel" layoutX="350.0" layoutY="345.0" prefHeight="200.0" prefWidth="200.0" />
+    <TextField fx:id="numPoste" layoutX="350.0" layoutY="143.0" prefHeight="31.0" prefWidth="200.0" />
+    <Label layoutX="200.0" layoutY="148.0" text="N° d'équipement" />
+    <Label layoutX="234.0" layoutY="210.0" text="Valeur (€)" />
+    <TextField fx:id="prix" layoutX="350.0" layoutY="205.0" prefHeight="31.0" prefWidth="200.0" />
     <Button fx:id="btnEditDelete" layoutX="341.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des équipements" />
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
+      <TextField fx:id="nbJoursPrev" layoutX="350.0" layoutY="269.0" prefHeight="31.0" prefWidth="200.0" />
+      <Label layoutX="61.0" layoutY="274.0" text="Nombre de jours prévisionnel d'utilisation" />
+      <Label layoutX="224.0" layoutY="336.0" text="Date d'achat" />
+      <DatePicker fx:id="dateAchat" layoutX="350.0" layoutY="331.0" prefHeight="31.0" prefWidth="200.0" />
+      <AnchorPane fx:id="sectionOrdinateur" layoutX="102.0" layoutY="427.0" prefHeight="332.0" prefWidth="696.0">
+         <children>
+            <ListView fx:id="lstLogiciel" layoutX="248.0" layoutY="86.0" prefHeight="200.0" prefWidth="200.0" />
+            <Button fx:id="btnSelectLogiciels" layoutX="478.0" layoutY="123.0" mnemonicParsing="false" onAction="#selectionLogiciels" text="Sélection logiciels" />
+            <Label layoutX="125.0" layoutY="86.0" text="Logiciels" />
+            <Label layoutX="112.0" layoutY="33.0" text="N° CP Agent" />
+            <Button fx:id="btnSelectAgent" layoutX="478.0" layoutY="28.0" mnemonicParsing="false" onAction="#selectionAgent" text="Sélection Agent" />
+            <TextField fx:id="numCPAgent" editable="false" layoutX="248.0" layoutY="28.0" prefHeight="31.0" prefWidth="200.0" />
+         </children>
+      </AnchorPane>
+      <Button fx:id="btnEnregistrer" layoutX="748.0" layoutY="83.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
+      <ChoiceBox fx:id="typeEquipement" layoutX="350.0" layoutY="396.0" prefHeight="31.0" prefWidth="200.0" />
+      <Label layoutX="193.0" layoutY="401.0" text="Type d'équipement" />
   </children>
 </AnchorPane>
