--- a/src/view/AjoutAgent.fxml
+++ b/src/view/AjoutAgent.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutAgent">
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutAgent">
   <children>
     <Label layoutX="344.0" layoutY="85.0" text="Ajouter un nouvel agent">
       <font>
@@ -26,21 +26,7 @@
     <TextField id="numPost" fx:id="numPoste" layoutX="351.0" layoutY="428.0" prefWidth="200.0" />
     <Label layoutX="241.0" layoutY="431.0" text="N° de poste" />
     <Button layoutX="563.0" layoutY="428.0" mnemonicParsing="false" text="Rechercher le poste" />
-    <Button layoutX="416.0" layoutY="641.0" mnemonicParsing="false" text="Ajouter" onAction="#enregistrerAgent"/>
-    <ComboBox fx:id="jour" layoutX="351.0" layoutY="326.0" minWidth="31.0" prefHeight="21.0" prefWidth="57.0">
-      <items>
-        <FXCollections fx:factory="observableArrayList" />
-      </items>
-    </ComboBox>
-    <ComboBox fx:id="mois" layoutX="413.0" layoutY="326.0" minWidth="42.0" prefHeight="21.0" prefWidth="57.0">
-      <items>
-        <FXCollections fx:factory="observableArrayList" />
-      </items>
-    </ComboBox>
-    <ComboBox fx:id="annee" layoutX="475.0" layoutY="326.0" minWidth="49.0" prefHeight="21.0" prefWidth="74.0">
-      <items>
-        <FXCollections fx:factory="observableArrayList" />
-      </items>
-    </ComboBox>
+    <Button layoutX="416.0" layoutY="641.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
+      <DatePicker fx:id="dateNaiss" layoutX="354.0" layoutY="323.0" prefHeight="31.0" prefWidth="200.0" />
   </children>
 </AnchorPane>
