--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -33,5 +33,6 @@
         <MenuItem mnemonicParsing="false" onAction="#exportTableExcel" text="Excel" />
       </items>
     </MenuButton>
+    <Button layoutX="671.0" layoutY="22.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" textAlignment="CENTER" />
   </children>
 </AnchorPane>
