--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -32,5 +32,6 @@
         <MenuItem mnemonicParsing="false" onAction="#exportTableExcel" text="Excel" />
       </items>
     </MenuButton>
+    <Button layoutX="666.0" layoutY="22.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
   </children>
 </AnchorPane>
