--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -9,12 +9,12 @@
 <AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionEquipement">
   <children>
     <Button layoutX="360.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddEquipment" text="Ajouter des équipements" />
-    <TableView fx:id="tableViewEquipement" layoutX="29.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="596.0" prefWidth="842.0">
+    <TableView fx:id="tableViewEquipement" layoutX="29.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="581.0" prefWidth="842.0">
       <columns>
-        <TableColumn fx:id="columnNumero" maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="N° d'équipement" />
-        <TableColumn fx:id="columnPrix" prefWidth="75.0" text="Valeur (€)" />
-        <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" />
-        <TableColumn fx:id="columnLogiciels" maxWidth="5000.0" minWidth="10.0" prefWidth="370.0" text="Logiciel(s) installé(s)" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="N° d'équipement" fx:id="columnNumero" />
+        <TableColumn prefWidth="75.0" text="Valeur (€)" fx:id="columnPrix" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" fx:id="columnAgent" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="370.0" text="Logiciel(s) installé(s)" fx:id="columnLogiciels" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" />
       </columns>
@@ -34,5 +34,6 @@
       </items>
     </MenuButton>
     <Button layoutX="671.0" layoutY="22.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" textAlignment="CENTER" />
+    <Button fx:id="buttonNext" layoutX="485.0" layoutY="768.0" mnemonicParsing="false" onAction="#viewMore" text="Suivant" textAlignment="CENTER" />
   </children>
 </AnchorPane>
