--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -9,11 +9,11 @@
 <AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionLogiciel">
   <children>
     <Button layoutX="375.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddLogiciel" text="Ajouter des logiciels" />
-    <TableView fx:id="tableLogiciel" layoutY="172.0" prefHeight="596.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
+    <TableView fx:id="tableLogiciel" layoutY="172.0" prefHeight="575.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
-        <TableColumn fx:id="columnLibelle" maxWidth="5000.0" minWidth="10.0" prefWidth="438.0" text="Libelle logiciel" />
-        <TableColumn fx:id="columnPrix" maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Valeur licence (€)" />
-        <TableColumn fx:id="columnDuree" maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="Durée licence" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="438.0" text="Libelle logiciel" fx:id="columnLibelle" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Valeur licence (€)" fx:id="columnPrix" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="Durée licence" fx:id="columnDuree" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" />
       </columns>
@@ -33,5 +33,6 @@
       </items>
     </MenuButton>
     <Button layoutX="666.0" layoutY="22.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
+    <Button fx:id="buttonNext" layoutX="474.0" layoutY="766.0" mnemonicParsing="false" text="Suivant" textAlignment="CENTER" />
   </children>
 </AnchorPane>
