--- a/src/view/Configuration.fxml
+++ b/src/view/Configuration.fxml
@@ -14,7 +14,7 @@
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
               <children>
-                <CheckBox fx:id="checkBoxTableauNbLigne" layoutX="138.0" layoutY="58.0" mnemonicParsing="false" text="Limiter le nombre d'enregistrement" />
+                <CheckBox fx:id="checkBoxTableauNbLigne" onAction="#changeTableauLimite" layoutX="138.0" layoutY="58.0" mnemonicParsing="false" text="Limiter le nombre d'enregistrement" />
                 <Label layoutX="76.0" layoutY="124.0" prefWidth="105.0" text="Nombre de ligne" />
                 <TextField fx:id="textFieldTableauNbLigne" layoutX="241.0" layoutY="121.0" prefWidth="200.0" />
               </children>
@@ -44,6 +44,6 @@
         </Tab>
       </tabs>
     </TabPane>
-    <Button layoutX="191.0" layoutY="442.0" mnemonicParsing="false" text="Enregistrement" />
+    <Button layoutX="191.0" layoutY="442.0" mnemonicParsing="false" onAction="#saveConfig" text="Enregistrement" />
   </children>
 </AnchorPane>
