--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionLogiciel">
   <children>
-    <Button layoutX="375.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayAddLogiciel" text="Ajouter des logiciels" />
+    <Button layoutX="373.0" layoutY="28.0" mnemonicParsing="false" onAction="#displayAddLogiciel" text="Ajouter des logiciels" />
     <TableView fx:id="tableLogiciel" layoutY="172.0" prefHeight="380.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="438.0" text="Libelle logiciel" fx:id="columnLibelle" />
@@ -20,19 +20,20 @@
     </TableView>
     <TextField layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
     <Button layoutX="738.0" layoutY="134.0" mnemonicParsing="false" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
-    <Separator layoutY="63.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-    <Label layoutX="297.0" layoutY="85.0" text="Modifier/Supprimer des logiciels">
+    <Separator layoutY="73.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+    <Label layoutX="297.0" layoutY="88.0" text="Modifier/Supprimer des logiciels">
       <font>
         <Font name="System Bold" size="18.0" />
       </font>
     </Label>
-    <MenuButton id="exportButton" layoutX="785.0" layoutY="22.0" mnemonicParsing="false" text="Exporter" textAlignment="CENTER">
+    <MenuButton id="exportButton" layoutX="725.0" layoutY="43.0" mnemonicParsing="false" text="Exporter" textAlignment="CENTER">
       <items>
         <MenuItem mnemonicParsing="false" onAction="#exportTablePDF" text="PDF" />
         <MenuItem mnemonicParsing="false" onAction="#exportTableExcel" text="Excel" />
       </items>
     </MenuButton>
-    <Button layoutX="666.0" layoutY="22.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
+    <Button layoutX="589.0" layoutY="28.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
     <Button fx:id="buttonNext" layoutX="474.0" layoutY="570.0" mnemonicParsing="false" text="Suivant" textAlignment="CENTER" />
+    <CheckBox layoutX="725.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
