--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -35,6 +35,6 @@
     </MenuButton>
     <Button layoutX="623.0" layoutY="25.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" textAlignment="CENTER" />
     <Button fx:id="buttonNext" layoutX="485.0" layoutY="570.0" mnemonicParsing="false" onAction="#viewMore" text="Suivant" textAlignment="CENTER" />
-    <CheckBox layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
+    <CheckBox fx:id="checkBoxExportTable" layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
