--- a/src/view/AjoutAgent.fxml
+++ b/src/view/AjoutAgent.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutAgent">
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutAgent">
   <children>
     <Label layoutX="344.0" layoutY="85.0" text="Ajouter un nouvel agent">
       <font>
@@ -26,12 +26,12 @@
     <TextField id="numPost" fx:id="numPoste" layoutX="351.0" layoutY="428.0" prefWidth="200.0" />
     <Label layoutX="241.0" layoutY="431.0" text="N° de poste" />
     <Button layoutX="563.0" layoutY="428.0" mnemonicParsing="false" onAction="#selectionPoste" text="Rechercher le poste" />
-    <Button layoutX="416.0" layoutY="641.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
-      <DatePicker fx:id="dateNaiss" layoutX="354.0" layoutY="323.0" prefHeight="31.0" prefWidth="200.0" />
-      <Label fx:id="msgAjoutOk" layoutX="326.0" layoutY="539.0" prefHeight="21.0" prefWidth="248.0" text="Nouvel agent ajouté avec succès !" textAlignment="CENTER" textFill="#0db915" visible="false">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
+    <Button layoutX="422.0" layoutY="495.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
+    <DatePicker fx:id="dateNaiss" layoutX="354.0" layoutY="323.0" prefHeight="31.0" prefWidth="200.0" />
+    <Label fx:id="msgAjoutOk" layoutX="326.0" layoutY="539.0" prefHeight="21.0" prefWidth="248.0" text="Nouvel agent ajouté avec succès !" textAlignment="CENTER" textFill="#0db915" visible="false">
+      <font>
+        <Font name="System Bold" size="15.0" />
+      </font>
+    </Label>
   </children>
 </AnchorPane>
