--- a/src/view/AjoutLogiciel.fxml
+++ b/src/view/AjoutLogiciel.fxml
@@ -15,12 +15,17 @@
     </Label>
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
     <Button id="btnEditDelete" layoutX="349.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des logiciels" />
-    <TextField layoutX="351.0" layoutY="220.0" prefWidth="200.0" />
-    <TextField layoutX="351.0" layoutY="271.0" prefWidth="200.0" />
-    <TextField layoutX="351.0" layoutY="325.0" prefWidth="200.0" />
+    <TextField fx:id="libelle" layoutX="351.0" layoutY="220.0" prefWidth="200.0" />
+    <TextField fx:id="duree" layoutX="351.0" layoutY="271.0" prefWidth="200.0" />
+    <TextField fx:id="prix" layoutX="351.0" layoutY="325.0" prefWidth="200.0" />
     <Label layoutX="243.0" layoutY="223.0" text="Libelle" />
     <Label layoutX="203.0" layoutY="274.0" text="Durée de la licence" />
     <Label layoutX="208.0" layoutY="328.0" text="Prix d'une licence" />
-    <Button layoutX="416.0" layoutY="495.0" mnemonicParsing="false" text="Ajouter" />
+    <Button layoutX="416.0" layoutY="372.0" mnemonicParsing="false" onAction="#enregistrerLogiciel" text="Ajouter" />
+    <Label fx:id="msgAjoutOk" layoutX="217.0" layoutY="424.0" prefHeight="23.0" prefWidth="453.0" text="Nouvel équipement ajouté avec succès !" textFill="#0db915" visible="false">
+      <font>
+        <Font name="System Bold" size="15.0" />
+      </font>
+    </Label>
   </children>
 </AnchorPane>
