--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -15,12 +15,12 @@
         <TableColumn prefWidth="75.0" text="Valeur (€)" fx:id="columnPrix" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" fx:id="columnAgent" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="370.0" text="Logiciel(s) installé(s)" fx:id="columnLogiciels" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" fx:id="columnModifier"/>
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" fx:id="columnSupprimer"/>
       </columns>
     </TableView>
-    <TextField layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
-    <Button layoutX="738.0" layoutY="134.0" mnemonicParsing="false" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
+    <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
+    <Button fx:id="searchButton" layoutX="738.0" layoutY="134.0" mnemonicParsing="false" onAction="#searchEquipement" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
     <Separator layoutY="75.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label layoutX="277.0" layoutY="91.0" text="Modifier/Supprimer des équipements">
       <font>
