--- a/src/view/GestionLogiciel.fxml
+++ b/src/view/GestionLogiciel.fxml
@@ -14,12 +14,12 @@
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="438.0" text="Libelle logiciel" fx:id="columnLibelle" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Valeur licence (€)" fx:id="columnPrix" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="Durée licence" fx:id="columnDuree" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" fx:id="columnModifier"/>
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" fx:id="columnSupprimer"/>
       </columns>
     </TableView>
-    <TextField layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
-    <Button layoutX="738.0" layoutY="134.0" mnemonicParsing="false" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
+    <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
+    <Button fx:id="searchButton" layoutX="738.0" layoutY="134.0" mnemonicParsing="false" onAction="#searchLogiciel" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
     <Separator layoutY="73.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label layoutX="297.0" layoutY="88.0" text="Modifier/Supprimer des logiciels">
       <font>
